[gd_scene load_steps=31 format=2]

[ext_resource path="res://levels/base_level/NPCManager.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles/CP_V1.0.4.png" type="Texture" id=2]
[ext_resource path="res://levels/base_level/base_level.gd" type="Script" id=3]
[ext_resource path="res://areas/boxy_obstacles.tres" type="TileSet" id=4]
[ext_resource path="res://areas/vertical_obstacles.tres" type="TileSet" id=5]
[ext_resource path="res://areas/ground.tres" type="TileSet" id=6]
[ext_resource path="res://guis/ingame_gui/gui.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/montserrat_eb_big.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://levels/base_level/intro.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 1
outline_color = Color( 0.898039, 0.32549, 0.505882, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0.898039, 0.32549, 0.505882, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=3]
resource_name = "slide_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 70 ), Vector2( 60, 70 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "slide_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60, 70 ), Vector2( -580, 70 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 6, 96, 0, 88, 0, 72, 48, 72, 48, 88, 42, 96 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 72, 0, 72, 48, 72, 48, 90, 42, 96, 6, 96, 0, 90 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 25, 48, 25, 48, 36, 47, 36, 47, 38, 43, 42, 5, 42, 1, 38, 1, 36, 0, 36 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 30, 32, 30, 32, 44, 28, 48, 3, 48, 0, 45 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 72, 48, 72, 48, 90, 42, 96, 6, 96, 0, 90 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 72, 48, 72, 48, 90, 42, 96, 6, 96, 0, 90 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 81, 96, 0, 96, 0, 64, 81, 64 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 24, 64, 24, 64, 42, 58, 48, 6, 48, 0, 42 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 24, 48, 24, 48, 42, 43, 47, 5, 47, 0, 42 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 15, 54, 10, 49, 10, 48, 6, 48, 0, 42, 0, 8, 64, 8, 64, 42, 58, 48, 54, 48, 54, 49, 49, 54 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 7, 48, 7, 48, 44, 44, 48, 4, 48, 0, 44 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 64, 42, 0, 42, 0, 26, 64, 26 )

[sub_resource type="TileSet" id=17]
0/name = "CP_V1.0.4.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, -24 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 32, 48, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, -24 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, -24 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -24 )
} ]
0/z_index = 0
1/name = "CP_V1.0.4.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, -24 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 112, 32, 48, 96 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, -24 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, -24 )
1/shape = SubResource( 6 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -24 )
} ]
1/z_index = 0
2/name = "CP_V1.0.4.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, -24 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 32, 48, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, -24 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, -24 )
2/shape = SubResource( 9 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -24 )
} ]
2/z_index = 0
3/name = "CP_V1.0.4.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, -24 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 288, 272, 48, 96 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, -24 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, -24 )
3/shape = SubResource( 10 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -24 )
} ]
3/z_index = 0
4/name = "CP_V1.0.4.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, -16 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 272, 32, 81, 96 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, -16 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, -16 )
4/shape = SubResource( 11 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -16 )
} ]
4/z_index = 0
5/name = "CP_V1.0.4.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 176, 64, 48 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 12 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "CP_V1.0.4.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 112, 176, 48, 47 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 13 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "CP_V1.0.4.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 192, 170, 64, 54 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 14 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "CP_V1.0.4.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, -8 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 288, 176, 48, 48 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, -8 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, -8 )
8/shape = SubResource( 15 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -8 )
} ]
8/z_index = 0
9/name = "CP_V1.0.4.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, -8 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 16, 278, 64, 42 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, -8 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, -8 )
9/shape = SubResource( 16 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -8 )
} ]
9/z_index = 0
10/name = "CP_V1.0.4.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, -8 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 112, 278, 48, 42 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, -8 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, -8 )
10/shape = SubResource( 7 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -8 )
} ]
10/z_index = 0
11/name = "CP_V1.0.4.png 11"
11/texture = ExtResource( 2 )
11/tex_offset = Vector2( 0, -8 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 208, 272, 32, 48 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, -8 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, -8 )
11/shape = SubResource( 8 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, -8 )
} ]
11/z_index = 0

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 320, 16 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 16, 180 )

[sub_resource type="NavigationPolygon" id=20]
resource_local_to_scene = true

[node name="Level" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Intro" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="Intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 320.0
margin_top = -110.0
margin_right = 840.0
margin_bottom = 110.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTitle" type="Label" parent="Intro/VBoxContainer"]
margin_top = 25.0
margin_right = 520.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Title !"
align = 1
valign = 1

[node name="HowToWin" type="Label" parent="Intro/VBoxContainer"]
margin_top = 97.0
margin_right = 520.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 9 )
text = "Hug People"
align = 1

[node name="Counter" type="Label" parent="Intro/VBoxContainer"]
margin_top = 144.0
margin_right = 520.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 2 )
text = "5"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Intro"]
autoplay = "slide_in"
anims/slide_in = SubResource( 3 )
anims/slide_out = SubResource( 4 )

[node name="IntroDuration" type="Timer" parent="Intro"]
pause_mode = 2
wait_time = 5.0
one_shot = true

[node name="GUI" parent="." instance=ExtResource( 7 )]

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 1441797, 3, 1, 1441798, 3, 1, 1441825, 3, 1, 1441826, 3, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GroundOnTop" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131078, 3, 1, 131079, 3, 1, 131080, 3, 1, 917512, 3, 1, 917513, 3, 1, 917514, 3, 1, 917515, 3, 1, 917516, 3, 1, 917517, 3, 1, 917518, 3, 1, 917519, 3, 1, 917531, 3, 1, 917532, 3, 1, 917533, 3, 1, 917534, 3, 1, 917535, 3, 1, 917536, 3, 1, 917537, 3, 1, 917538, 3, 1, 983045, 3, 1, 983046, 3, 1, 983047, 3, 1, 983048, 3, 1, 983049, 3, 1, 983050, 3, 1, 983051, 3, 1, 983052, 3, 1, 983053, 3, 1, 983054, 3, 1, 983068, 3, 1, 983069, 3, 1, 983070, 3, 1, 983071, 3, 1, 983072, 3, 1, 983073, 3, 1, 983074, 3, 1, 1048580, 3, 1, 1048581, 3, 1, 1048582, 3, 1, 1048583, 3, 1, 1048584, 3, 1, 1048585, 3, 1, 1048586, 3, 1, 1048587, 3, 1, 1048588, 3, 1, 1048589, 3, 1, 1048591, 3, 1, 1114118, 3, 1, 1114119, 3, 1, 1114120, 3, 1, 1114121, 3, 1, 1114122, 3, 1, 1114123, 3, 1, 1114124, 3, 1, 1114126, 3, 1, 1114140, 3, 1, 1114141, 3, 1, 1114142, 3, 1, 1114143, 3, 1, 1114144, 3, 1, 1114145, 3, 1, 1114146, 3, 1, 1179654, 3, 1, 1179655, 3, 1, 1179656, 3, 1, 1179657, 3, 1, 1179658, 3, 1, 1179661, 3, 1, 1179662, 3, 1, 1179676, 3, 1, 1179677, 3, 1, 1179678, 3, 1, 1179679, 3, 1, 1179680, 3, 1, 1179681, 3, 1, 1179682, 3, 1, 1245190, 3, 1, 1245191, 3, 1, 1245192, 3, 1, 1245193, 3, 1, 1245195, 3, 1, 1245196, 3, 1, 1245197, 3, 1, 1245198, 3, 1, 1245212, 3, 1, 1245213, 3, 1, 1245214, 3, 1, 1245215, 3, 1, 1245216, 3, 1, 1245217, 3, 1, 1245218, 3, 1, 1310725, 3, 1, 1310726, 3, 1, 1310727, 3, 1, 1310728, 3, 1, 1310730, 3, 1, 1310731, 3, 1, 1310732, 3, 1, 1310733, 3, 1, 1310734, 3, 1, 1310748, 3, 1, 1310749, 3, 1, 1310750, 3, 1, 1310751, 3, 1, 1310752, 3, 1, 1310753, 3, 1, 1310754, 3, 1, 1376261, 3, 1, 1376262, 3, 1, 1376263, 3, 1, 1376265, 3, 1, 1376266, 3, 1, 1376267, 3, 1, 1376268, 3, 1, 1376269, 3, 1, 1376270, 3, 1, 1376283, 3, 1, 1376284, 3, 1, 1376285, 3, 1, 1376286, 3, 1, 1376287, 3, 1, 1376288, 3, 1, 1376289, 3, 1, 1376290, 3, 1, 1441797, 3, 1, 1441798, 3, 1, 1441800, 3, 1, 1441801, 3, 1, 1441802, 3, 1, 1441803, 3, 1, 1441804, 3, 1, 1441805, 3, 1, 1441806, 3, 1, 1441819, 3, 1, 1441820, 3, 1, 1441821, 3, 1, 1441822, 3, 1, 1441823, 3, 1, 1441824, 3, 1, 1441825, 3, 1, 1441826, 3, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="YSort" type="YSort" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="VerticalObstacles" type="TileMap" parent="YSort"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
collision_use_kinematic = true
collision_layer = 4
collision_mask = 0
format = 1

[node name="BoxyObstacles" type="TileMap" parent="YSort"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
collision_layer = 4
collision_mask = 0
format = 1

[node name="Buildings" type="TileMap" parent="YSort"]
tile_set = SubResource( 17 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
collision_layer = 2
collision_mask = 0
format = 1

[node name="NPCList" type="YSort" parent="YSort"]

[node name="Players" type="YSort" parent="YSort"]

[node name="MapLimits" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Top" type="CollisionShape2D" parent="MapLimits"]
position = Vector2( 320, -16 )
shape = SubResource( 18 )

[node name="Bottom" type="CollisionShape2D" parent="MapLimits"]
position = Vector2( 320, 376 )
shape = SubResource( 18 )

[node name="Left" type="CollisionShape2D" parent="MapLimits"]
position = Vector2( -16, 180 )
shape = SubResource( 19 )

[node name="Right" type="CollisionShape2D" parent="MapLimits"]
position = Vector2( 656, 180 )
shape = SubResource( 19 )

[node name="NPCManager" type="Navigation2D" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
npc_max_number = 0

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="NPCManager"]
navpoly = SubResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="NPCSpawns" type="Node" parent="NPCManager"]

[node name="TopPositions" type="Node" parent="NPCManager/NPCSpawns"]

[node name="LeftPositions" type="Node" parent="NPCManager/NPCSpawns"]

[node name="BottomPositions" type="Node" parent="NPCManager/NPCSpawns"]

[node name="RightPositions" type="Node" parent="NPCManager/NPCSpawns"]

[node name="IncreaseSpawnRate" type="Timer" parent="NPCManager"]
autostart = true

[node name="Respawns" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="Respawns"]
position = Vector2( 96, 96 )

[node name="Position2D2" type="Position2D" parent="Respawns"]
position = Vector2( 544, 96 )

[node name="Position2D3" type="Position2D" parent="Respawns"]
position = Vector2( 96, 264 )

[node name="Position2D4" type="Position2D" parent="Respawns"]
position = Vector2( 544, 264 )

[node name="TimeLimit" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="animation_finished" from="Intro/AnimationPlayer" to="Intro" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Intro/IntroDuration" to="." method="_on_IntroDuration_timeout"]
[connection signal="timeout" from="Intro/IntroDuration" to="Intro" method="_on_IntroDuration_timeout"]
[connection signal="timeout" from="NPCManager/IncreaseSpawnRate" to="NPCManager" method="_on_IncreaseSpawnRate_timeout"]
[connection signal="timeout" from="TimeLimit" to="." method="_on_TimeLimit_timeout"]
